[package]
name = "swap"
version = "0.1.0"
description = "buyanytoken_contracts_solana"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
no-entrypoint     = []
no-idl            = []
no-log-ix-name    = []
cpi               = ["no-entrypoint"]
default           = ["no-idl", "no-log-ix-name"]
idl-build         = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl  = { version = "0.31.0", default-features = false, features = ["token", "associated_token", "mint"] }

[profile.release]
opt-level       = "z"
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true

